--- a/template/PNET_project.bib
+++ b/template/PNET_project.bib
@@ -10,8 +10,97 @@ Radiosensitivity Prediction},
 }
 
 @misc{scikit-learn-docs,
-  title={{scikit-learn} Documentation},
-  author={{scikit-learn} Contributors},
+  title={"sklearn.metrics.r2\_score"},
+  author={{scikit-learn} contributors},
   howpublished={\url{https://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html}},
   year={Accessed: April 8, 2024}
+}
+Yock, T., Tarbell, N. Technology Insight: proton beam radiotherapy for treatment in pediatric brain tumors. Nat Rev Clin Oncol 1, 97–103 (2004). https://doi.org/10.1038/ncponc0090
+@article{proton_beam,
+    author = {{Yock, T. and Tarbell, N.}} ,
+    title = {{. Technology Insight: proton beam radiotherapy for treatment in pediatric brain tumors}},
+    journal = {{Nat Rev Clin Oncol}},
+    year = 2004,
+    pages= {{97-103}},
+    doi={{https://doi.org/10.1038/ncponc0090}},
+    volume=1
+}
+@article{SCOTT2017202,
+title = {A genome-based model for adjusting radiotherapy dose (GARD): a retrospective, cohort-based study},
+journal = {The Lancet Oncology},
+volume = {18},
+number = {2},
+pages = {202-211},
+year = {2017},
+issn = {1470-2045},
+doi = {https://doi.org/10.1016/S1470-2045(16)30648-9},
+url = {https://www.sciencedirect.com/science/article/pii/S1470204516306489},
+author = {Jacob G Scott and Anders Berglund and Michael J Schell and Ivaylo Mihaylov and William J Fulp and Binglin Yue and Eric Welsh and Jimmy J Caudell and Kamran Ahmed and Tobin S Strom and Eric Mellon and Puja Venkat and Peter Johnstone and John Foekens and Jae Lee and Eduardo Moros and William S Dalton and Steven A Eschrich and Howard McLeod and Louis B Harrison and Javier F Torres-Roca}
+}
+@article{speers2015development,
+  title={Development and validation of a novel radiosensitivity signature in human breast cancer},
+  author={Speers, Corey and Zhao, Shuang and Liu, Meilan and Bartelink, Harry and Pierce, Lori J and Feng, Felix Y},
+  journal={Clinical Cancer Research},
+  volume={21},
+  number={16},
+  pages={3667--3677},
+  year={2015},
+  publisher={AACR}
+}
+
+@article{review,
+    author = {{Wysocka, M. and others}},
+    title = {{A systematic review of biologically-informed deep learning models for cancer: fundamental trends for encoding and interpreting oncology data.}},
+    journal ={{BMC Bioinformatics}} ,
+    volume = 24,
+    pages=198,
+    doi = {{https://doi.org/10.1186/s12859-023-05262-8}},
+    year = 2023
+}
+@article{review_2,
+    author ={{Novakovsky, G. and others}},
+    title = {{Obtaining genetics insights from deep learning via explainable artificial intelligence}},
+    journal ={{Nat Rev Genet }} ,
+    year = 2023,
+    pages={{125-137}},
+    volume=24,
+    doi={{https://doi.org/10.1038/s41576-022-00532-2}}
+}
+
+@article{kuenzi_predicting_2020,
+	title = {Predicting Drug Response and Synergy Using a Deep Learning Model of Human Cancer Cells},
+	volume = {38},
+	issn = {1535-6108, 1878-3686},
+	url = {https://www.cell.com/cancer-cell/abstract/S1535-6108(20)30488-8},
+	doi = {10.1016/j.ccell.2020.09.014},
+	pages = {672--684.e6},
+	number = {5},
+	journaltitle = {Cancer Cell},
+	shortjournal = {Cancer Cell},
+	author = {Kuenzi, Brent M. and Park, Jisoo and Fong, Samson H. and Sanchez, Kyle S. and Lee, John and Kreisberg, Jason F. and Ma, Jianzhu and Ideker, Trey},
+	urldate = {2024-01-20},
+	date = {2020-11-09},
+	pmid = {33096023},
+	note = {Publisher: Elsevier},
+	keywords = {machine learning, cancer, drug synergy, interpretable deep learning, network modeling, precision medicine}
+}
+@article{elmarakeby_biologically_2021,
+	title = {Biologically informed deep neural network for prostate cancer discovery},
+	volume = {598},
+	rights = {2021 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-021-03922-4},
+	doi = {10.1038/s41586-021-03922-4},
+	abstract = {The determination of molecular features that mediate clinically aggressive phenotypes in prostate cancer remains a major biological and clinical challenge1,2. Recent advances in interpretability of machine learning models as applied to biomedical problems may enable discovery and prediction in clinical cancer genomics3–5. Here we developed P-{NET}—a biologically informed deep learning model—to stratify patients with prostate cancer by treatment-resistance state and evaluate molecular drivers of treatment resistance for therapeutic targeting through complete model interpretability. We demonstrate that P-{NET} can predict cancer state using molecular data with a performance that is superior to other modelling approaches. Moreover, the biological interpretability within P-{NET} revealed established and novel molecularly altered candidates, such as {MDM}4 and {FGFR}1, which were implicated in predicting advanced disease and validated in vitro. Broadly, biologically informed fully interpretable neural networks enable preclinical discovery and clinical prediction in prostate cancer and may have general applicability across cancer types.},
+	pages = {348--352},
+	number = {7880},
+	journaltitle = {Nature},
+	author = {Elmarakeby, Haitham A. and Hwang, Justin and Arafeh, Rand and Crowdis, Jett and Gang, Sydney and Liu, David and {AlDubayan}, Saud H. and Salari, Keyan and Kregel, Steven and Richter, Camden and Arnoff, Taylor E. and Park, Jihye and Hahn, William C. and Van Allen, Eliezer M.},
+	urldate = {2024-01-16},
+	date = {2021-10},
+	langid = {english},
+	note = {Number: 7880
+Publisher: Nature Publishing Group},
+	keywords = {Cancer genomics, Computer science},
+	file = {Full Text PDF:/Users/daksheshkololgi/Zotero/storage/YIFXQKGJ/Elmarakeby et al. - 2021 - Biologically informed deep neural network for pros.pdf:application/pdf},
 }
