add some more subsections (early stop etc)

--- a/template/PNET_project.bib
+++ b/template/PNET_project.bib
@@ -15,7 +15,14 @@ Radiosensitivity Prediction},
   howpublished={\url{https://scikit-learn.org/stable/modules/generated/sklearn.metrics.r2_score.html}},
   year={Accessed: April 8, 2024}
 }
-Yock, T., Tarbell, N. Technology Insight: proton beam radiotherapy for treatment in pediatric brain tumors. Nat Rev Clin Oncol 1, 97–103 (2004). https://doi.org/10.1038/ncponc0090
+@misc{keras-docs,
+  title={"Early Stopping"},
+  author={{keras} contributors},
+  howpublished={\url{https://keras.io/api/callbacks/early_stopping/}},
+  year={Accessed: April 9, 2024}
+}
+
+
 @article{proton_beam,
     author = {{Yock, T. and Tarbell, N.}} ,
     title = {{. Technology Insight: proton beam radiotherapy for treatment in pediatric brain tumors}},
@@ -66,6 +73,23 @@ author = {Jacob G Scott and Anders Berglund and Michael J Schell and Ivaylo Miha
     volume=24,
     doi={{https://doi.org/10.1038/s41576-022-00532-2}}
 }
+
+@article{cross_validate,
+    author = {Cawley, Gavin C. and Talbot, Nicola L.C.},
+    title = {On Over-fitting in Model Selection and Subsequent Selection Bias in Performance Evaluation},
+    year = {2010},
+    issue_date = {3/1/2010},
+    publisher = {JMLR.org},
+    volume = {11},
+    issn = {1532-4435},
+    journal = {J. Mach. Learn. Res.},
+    month = {aug},
+    pages = {2079–2107},
+    numpages = {29}
+    }
+
+      
+
 
 @article{kuenzi_predicting_2020,
 	title = {Predicting Drug Response and Synergy Using a Deep Learning Model of Human Cancer Cells},
